fix: sektör aramasında alakasız hesap kirlenmesi + sektör/alt sektör listesi küçültme
Moda/Lüks Moda vakası: Apify'ın alt sektör keyword aramasıyla bulduğu SECTOR
hesapları arasına, kullanıcı adında tesadüfen aynı kelimeler geçen alakasız
bir hesap (gerçek örnekte bir emlak hesabı) sızabiliyordu; yüksek etkileşimi
sayesinde rapor ve Brand DNA'yı domine ediyordu.

- SectorRelevanceFilter (yeni): mevcut post_analysis.productCategory verisini
  kullanarak (ekstra AI çağrısı yok) diğer hiçbir sektör hesabıyla kelime
  örtüşmesi olmayan hesapları tespit edip dışlar. ReportPipelineService ve
  ContentPipelineService.loadVisualPatterns ikisi de kullanıyor.
- TargetResolver.loadUserSectorKeyword: Apify arama terimi artık HER ZAMAN
  sektör adı (alt sektör değil) — dar/çok kelimeli alt sektör ifadeleri
  Apify'ın metin-tabanlı aramasında küçük bir eşleşme havuzuna sahip olduğundan
  alakasız hesap sızma riskini artırıyordu. Alt sektör hâlâ Brand DNA/prompt
  bağlamında (ContentPipelineService.loadUserSectorContext) kullanılıyor.
- V8__sector_curation.sql: 30 sektörden Türkiye'de Instagram üzerinden en çok
  satış/hizmet yapılan 16'sı tutuldu (Gökhan onayı), kalan 14'ü silindi;
  Moda'ya yeni "Takı" alt sektörü eklendi.

9 yeni/güncellenmiş test, tam suite 81/81 PASS.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>